<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblRate"
        android:id="@+id/lblRate"
        android:gravity="center"
        android:textSize="32sp"
        android:textIsSelectable="true"
        android:layout_marginTop="35dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConvert"
        android:background="@drawable/btn_convert"
        android:id="@+id/btnConvert"
        android:enabled="false"
        android:layout_below="@+id/lblRate"
        android:layout_centerHorizontal="true"

        android:cropToPadding="false"
        android:focusable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblLastRefreshed"
        android:id="@+id/lblLastRefreshed"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textSize="12sp"
        android:layout_marginBottom="13dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgPoweredBy"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/powered_by_yahoo"
        android:contentDescription="@string/imgPoweredBy"
        android:layout_marginBottom="11dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblLastRefreshedValue"
        android:id="@+id/lblLastRefreshedValue"
        android:layout_alignBottom="@+id/lblLastRefreshed"
        android:layout_toRightOf="@+id/lblLastRefreshed"
        android:textSize="12sp"
        android:layout_marginLeft="5dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/spnCurrencyTo"
        android:layout_alignBottom="@+id/lblCurrencySep"
        android:layout_toRightOf="@+id/lblCurrencySep" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblCurrencySep"
        android:id="@+id/lblCurrencySep"
        android:layout_above="@+id/lblRate"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/spnCurrencyFrom"
        android:layout_alignBottom="@+id/lblCurrencySep"
        android:layout_toLeftOf="@+id/lblCurrencySep" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hsvExtraDetails"
        android:layout_below="@+id/btnConvert"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layExtraDetails">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:id="@+id/layAskPlaceholder">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lblAsk"
                    android:id="@+id/lblAsk"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblDetailsNumericPlaceholder"
                    android:id="@+id/lblAskValue"
                    android:layout_below="@+id/lblAsk"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:id="@+id/layBidPlaceholder">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lblBid"
                    android:id="@+id/lblBid"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblDetailsNumericPlaceholder"
                    android:id="@+id/lblBidValue"
                    android:layout_below="@+id/lblBid"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:id="@+id/layDatePlaceholder">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lblDate"
                    android:id="@+id/lblDate"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblDateValue"
                    android:id="@+id/lblDateValue"
                    android:layout_below="@+id/lblDate"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:id="@+id/layTimePlaceholder">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lblTime"
                    android:id="@+id/lblTime"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblTimeValue"
                    android:id="@+id/lblTimeValue"
                    android:layout_below="@+id/lblTime"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>
