<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PopupChangeSettings" >

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/swtRefreshOnlyOnWifi"
        android:id="@+id/swtRefreshOnlyOnWiFi"
        android:layout_margin="10dp"
        android:checked="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/swtRefreshOnlyOnWiFi"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveClose"
            android:background="@drawable/btn_convert"
            android:layout_margin="5dp"
            android:id="@+id/btnSaveClose" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:background="@drawable/btn_convert"
            android:layout_margin="5dp"
            android:id="@+id/btnCancel" />

    </LinearLayout>

</RelativeLayout>