<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PopupChangeDefaults" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/lblCurrencyFrom"
        android:id="@+id/lblCurrencyFrom"
        android:layout_marginTop="10dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnCurrencyFrom"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/lblCurrencyFrom"
        android:layout_below="@+id/lblCurrencyFrom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/lblCurrencyTo"
        android:id="@+id/lblCurrencyTo"
        android:layout_above="@+id/spnCurrencyTo"
        android:layout_alignParentRight="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnCurrencyTo"
        android:layout_alignRight="@+id/lblCurrencyTo"
        android:layout_below="@+id/lblCurrencyFrom" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/spnCurrencyTo"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveClose"
            android:background="@drawable/btn_convert"
            android:layout_margin="5dp"
            android:id="@+id/btnSaveClose" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:background="@drawable/btn_convert"
            android:layout_margin="5dp"
            android:id="@+id/btnCancel" />

    </LinearLayout>

</RelativeLayout>
